samples/_failures_safe/1761242170_853a18_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_10b2e2bd.c: In function ‘token_type_name’:
./samples/SAFE/__tmp_10b2e2bd.c:171:9: error: expected declaration or statement at end of input
  171 |         case TOKEN_EOF: return "EOF";
      |         ^~~~
./samples/SAFE/__tmp_10b2e2bd.c:171:9: error: expected declaration or statement at end of input
